more detailed debugging
updated the error message to include error name and stack trace

--- a/index.html
+++ b/index.html
@@ -1986,6 +1986,7 @@
       try {
         // Use our secure serverless function to exchange the code
         // This keeps the client_secret safe on the server
+        alert(`Debug: Starting fetch to /api/token with redirect_uri: ${REDIRECT_URI}`);
         const response = await fetch('/api/token', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -1996,6 +1997,7 @@
           })
         });
 
+        alert(`Debug: Fetch complete, status: ${response.status}`);
         const data = await response.json();
 
         if (data.access_token) {
@@ -2009,7 +2011,7 @@
         }
       } catch (error) {
         console.error('Auth error:', error);
-        alert(`Failed to connect to Strava: ${error.message}`);
+        alert(`Failed to connect to Strava: ${error.name} - ${error.message} at ${error.stack}`);
         hideLoading();
       }
     }
