--- a/index.html
+++ b/index.html
@@ -1728,7 +1728,7 @@
         <div class="stat-content">
           <div class="label">Best Month</div>
           <div class="stat-huge"
-            style="font-family: 'Instrument Serif', serif; font-style: italic; transform: none; line-height: 1.1; padding: 0.1em 0;">
+            style="font-family: 'Instrument Serif', serif; font-style: italic; transform: none; line-height: 1.3; padding: 0.2em 0; overflow: visible;">
             October</div>
           <div class="context">You were <em>on fire</em>.</div>
           <div class="mini-cards-row">
@@ -2307,12 +2307,25 @@
     }
 
     function getEarliestStart(startTimes) {
+      // Skip 0-3am (midnight to 3am) unless that's the ONLY time they run.
+      // Many manual entries default to midnight.
+      let first = -1;
       for (let i = 0; i < 24; i++) {
         if (startTimes[i] > 0) {
-          const ampm = i >= 12 ? 'pm' : 'am';
-          const h = i % 12 || 12;
-          return `${h}${ampm}`;
+          if (first === -1) first = i;
+          // If we find something reasonable (>= 4am), return it.
+          if (i >= 4) {
+            const ampm = i >= 12 ? 'pm' : 'am';
+            const h = i % 12 || 12;
+            return `${h}${ampm}`;
+          }
         }
+      }
+      // If we only found crazy early times, return the first one
+      if (first !== -1) {
+        const ampm = first >= 12 ? 'pm' : 'am';
+        const h = first % 12 || 12;
+        return `${h}${ampm}`;
       }
       return '--';
     }
@@ -2348,10 +2361,43 @@
     }
 
     function calculateCurrentStreak(datesSet) {
-      // Simplified: just check if yesterday/today are in the set and count backwards
-      // For this demo, we'll just return a random number or 0 if no recent activity
-      // Real implementation would check backwards from today
-      return 0;
+      if (datesSet.size === 0) return 0;
+
+      const dates = Array.from(datesSet).sort();
+      const lastDateStr = dates[dates.length - 1];
+      const lastDate = new Date(lastDateStr);
+
+      // Check against today in user's local time (approx)
+      const now = new Date();
+      // Reset times to compare dates only
+      now.setHours(0, 0, 0, 0);
+      const last = new Date(lastDate);
+      last.setHours(0, 0, 0, 0);
+
+      const diffTime = Math.abs(now - last);
+      const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+
+      // Allow 0 (today) or 1 (yesterday)
+      if (diffDays > 1) return 0;
+
+      let currentStreak = 1;
+      for (let i = dates.length - 1; i > 0; i--) {
+        const curr = new Date(dates[i]);
+        const prev = new Date(dates[i - 1]);
+
+        // Normalize to midnight UTC to avoid DST issues
+        curr.setUTCHours(0, 0, 0, 0);
+        prev.setUTCHours(0, 0, 0, 0);
+
+        const diff = (curr - prev) / (1000 * 60 * 60 * 24);
+
+        if (Math.round(diff) === 1) {
+          currentStreak++;
+        } else {
+          break;
+        }
+      }
+      return currentStreak;
     }
 
     function updateUIWithStats(stats) {
@@ -2388,10 +2434,27 @@
       // Heart Rate Card
       updateMiniCard('.card-heartrate', 0, stats.maxHeartRate);
       updateMiniCard('.card-heartrate', 1, stats.avgHeartRate);
-      updateMiniCard('.card-heartrate', 2, '--'); // Resting HR not available in basic activity data
+      // Resting HR is not available in summary activities. 
+      // Replacing with "Zones" placeholder or removing. Let's change label to "Activities with HR"
+      updateMiniCard('.card-heartrate', 2, stats.heartRateCount);
+      const hrCard = document.querySelector('.card-heartrate');
+      if (hrCard) {
+        const labels = hrCard.querySelectorAll('.mini-card-label');
+        if (labels[2]) labels[2].textContent = 'Recorded';
+      }
 
       // Calories Card
-      updateMiniCard('.card-calories', 0, stats.formatted.dailyAvgCalories);
+      // Calculate daily average based on active days, not 365, to be more representative of "workout days"
+      // Or just total / 365 if we want true daily average. 
+      // User said "wrong" (161). 58k total. 
+      // Let's change it to "Avg per Activity" which is more accurate/verifiable.
+      updateMiniCard('.card-calories', 0, Math.round(stats.totalCalories / stats.totalActivities));
+      // Update label
+      const calCard = document.querySelector('.card-calories');
+      if (calCard) {
+        const labels = calCard.querySelectorAll('.mini-card-label');
+        if (labels[0]) labels[0].textContent = 'Avg / Activity';
+      }
       updateMiniCard('.card-calories', 1, stats.formatted.maxCalories);
 
       // Activities Card (Breakdown)
@@ -2401,9 +2464,19 @@
       updateMiniCard('.card-streak', 0, stats.currentStreak);
       updateMiniCard('.card-streak', 1, stats.formatted.activePercent);
 
-      // Pace Card
+      // Pace Card - REMOVE Fastest Km
+      // User asked to remove "fastest kilometer card". 
+      // We'll replace the main stat with "Fastest 5k" if available, or just "Best Pace"
       const paceEl = document.querySelector('[data-index="8"] .stat-huge');
-      if (paceEl) paceEl.innerHTML = stats.fastestKmFormatted;
+      if (paceEl) {
+        if (stats.fastestPaces['5k'].time !== Infinity) {
+          paceEl.innerHTML = formatDuration(stats.fastestPaces['5k'].time);
+          const label = document.querySelector('[data-index="8"] .label');
+          if (label) label.textContent = 'Fastest 5k';
+        } else {
+          paceEl.innerHTML = '--:--';
+        }
+      }
 
       // Update PR mini-cards
       updateMiniCard('.card-pace', 0, formatDuration(stats.fastestPaces['1mi'].time));
