restore loading screen

--- a/index.html
+++ b/index.html
@@ -1323,6 +1323,14 @@
   </div>
 
   <!-- Loading Screen -->
+  <div class="loading-screen hidden" id="loadingScreen">
+    <div class="emoji-cycler" id="emojiCycler">🏃</div>
+    <div class="loading-text">Warming up...</div>
+    <div class="loading-progress-container">
+      <div class="loading-progress-bar"></div>
+    </div>
+    <div class="loading-subtext" id="loadingSubtext">Connecting to Strava</div>
+  </div>
 
   <div class="gradient-spotlight" id="gradientSpotlight"></div>
   <div class="wrapped-content hidden" id="wrappedContent">
